[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
flutter_rust_bridge = "1"
aes = "0.8.1"
cbc = { version = "0.1.2", features = ['alloc'] }
hex-literal = "0.3.4"
anyhow = "1.0.57"
lazy_static = "1.4.0"